--- a/src/static/readarticle.css
+++ b/src/static/readarticle.css
@@ -1,62 +1,89 @@
-.article-container{
+/* Media Query for Small Screens */
+@media (max-width: 768px) {
+    .article-container {
+      width: 90%;
+    }
+  
+    .article-title {
+      font-size: 24px;
+    }
+  
+    .article-image {
+      height: auto;
+    }
+  
+    .article-info {
+      flex-direction: column;
+      align-items: center;
+    }
+  
+    .share-icons {
+      justify-content: center;
+    }
+  }
+  
+
+  .article-container {
     margin: 0 auto;
     width: 80%;
     padding: 20px;
     background-color: #fff;
     border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.2);
-    border: black;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    border: 1px solid #ddd; 
     margin-bottom: 20px;
     margin-top: 20px;
-    border-radius: 20px;
-}
-
-.article-container h1{
+  }
+  
+  .article-container h1 {
     text-align: center;
-    font-size: 40px;
+    font-size: 32px;
     font-weight: 700;
+    text-align: left;
     margin-bottom: 20px;
-    justify-content: center;
-    text-decoration: underline;
-}
 
-.article-info{
+    text-decoration: underline;
+  }
+  
+  .article-info {
     display: flex;
     justify-content: space-between;
+    align-items: center; /* Align items vertically */
     margin-bottom: 20px;
-}
-
-.article-image{
-    width: auto;
-    height: 400px;
+  }
+  
+  .article-image {
+    width: 100%;
+    height: auto;
     margin-bottom: 20px;
-
-}
-
-.article-content{
+    border-radius: 8px; /* Add border-radius for rounded corners */
+  }
+  
+  .article-content {
     font-size: 20px;
     line-height: 1.5;
     margin-bottom: 20px;
-    font-display: block;
     text-align: justify;
-}
-
-.share-icons{
+  }
+  
+  .share-icons {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 20px;
-}
-
-.icon{
-    width: 30px;
-    height: 30px;
+  }
+  
+  .icon {
+    width: 40px;
+    height: 40px;
     border-radius: 50%;
     background-color: #fff;
     display: flex;
-    align-items: right;
+    align-items: center;
+    justify-content: center;
     cursor: pointer;
-}
-
-.icon:hover{
+    transition: background-color 0.3s ease-in-out;
+  }
+  
+  .icon:hover {
     background-color: #812a92;
-}
+  }
+  
